--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -31,7 +31,7 @@
 </nav>
 
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('../../static/theme/img/contact-bg.jpg')" th:url="@{/theme/img/contact-bgjpg}">
+<header class="masthead" style="background-image: url('../../static/theme/img/contact-bg.jpg')" th:url="@{/theme/img/contact-bgjpg}" th:replace="admin/_fragments :: header">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -49,34 +49,34 @@
 <!-- Main Content -->
 <div class="container">
     <div class="col-lg-8 col-md-10 mx-auto">
-        <form method="post" th:object="${blog}" th:action="@{/admin/blogs}" id="blog-form">
+        <form method="post" id="blogForm" th:object="${blog}" th:action="@{/admin/blogs}">
             <input type="hidden" name="published" th:value="*{published}">
             <input type="hidden" name="id" th:value="*{id}">
             <div class="control-group">
                 <div class="form-group floating-label-form-group controls">
                     <label>Title</label>
-                    <input type="text" name="title" class="form-control" th:value="*{title}"placeholder="Title" required data-validation-required-message="Please enter its title.">
+                    <input type="text" name="title" class="form-control" th:value="*{title}"placeholder="Title">
                     <p class="help-block text-danger"></p>
                     </div>
             </div>
             <div class="control-group">
                 <div class="form-group floating-label-form-group controls">
                     <label>Picture</label>
-                    <input type="text" name="firstPicture" class="form-control" th:value="*{firstPicture}" placeholder="Picture URL" required data-validation-required-message="Please enter your picture's URL(If your want).">
+                    <input type="text" name="firstPicture" class="form-control" th:value="*{firstPicture}" placeholder="Top Picture URL(can be empty)">
                     <p class="help-block text-danger"></p>
                 </div>
             </div>
             <div class="control-group">
                 <div class="form-group floating-label-form-group controls" id="md-editor" style="z-index: 1 !important;">
                     <label>Context</label>
-                    <textarea class="form-control"  name="content" placeholder="Content" th:text="*{content}" required data-validation-required-message="Please enter some content."></textarea>
+                    <textarea class="form-control"  name="content" placeholder="Content" th:text="*{content}"></textarea>
                     <p class="help-block text-danger"></p>
                 </div>
             </div>
             <div class="form-row">
                 <div class="col-4">
                     <input type="hidden" name="forTypeId" th:value="*{type}!=null ? *{type.id}">
-                    <select class="form-control selectpicker" name="typeId" title="Type" required>
+                    <select class="form-control selectpicker" name="typeId" title="Type">
                         <div th:each="type : ${types}">
                             <option th:text = ${type.name}  th:value="${type.id}" ></option>
                         </div>
@@ -84,14 +84,14 @@
                 </div>
                 <div class="col-4">
                     <input type="hidden" name="forTagIds" th:value="*{tagIds}">
-                    <select class="form-control selectpicker" multiple   name="tagIds" title="Tags" required>
+                    <select class="form-control selectpicker" multiple   name="tagIds" title="Tags" >
                         <div th:each="tag : ${tags}">
                             <option th:text = ${tag.name}  th:value="${tag.id}"></option>
                         </div>
                     </select>
                 </div>
             </div>
-
+            <br>
             <br>
             <div id="success"></div>
             <div class="form-row">
@@ -160,6 +160,10 @@
 <script src="../../static/theme/js/clean-blog.min.js"></script>
 <!--/*/</th:block>/*/-->
 
+
+<!--jquery validate-->
+<script th:src="@{/theme/js/jquery.validate.min.js}"></script>
+
 <script>
 
     //初始化markdown編輯器
@@ -171,6 +175,32 @@
             path   : "/editormd/lib/"
         });
     });
+
+    $(function() {
+        $('#blogForm').validate({
+            rules: {
+                title: {
+                    required: true
+                },
+                tagIds: {
+                    required: true
+                },
+                typeId: {
+                    required: true
+                }
+
+            },
+            messages: {
+                title: "Please enter blog's title.",
+                tagIds: "Please select blog's tags.",
+                typeId: "Please select blog's type."
+            },
+            debug: false, //这个参数为true，那么表单不会提交，只进行检查
+            errorElement:"em",
+            errorClass:"text-danger"
+        });
+    });
+
     $(window).on('load', function() {
         $("[name='typeId']").selectpicker('val', $("[name='forTypeId']").val());
         var array = JSON.parse("[" + $("[name='forTagIds']").val() + "]");
