--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
@@ -33,7 +32,7 @@
 
 <!-- Page Header -->
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('../../static/theme/img/contact-bg.jpg')" th:url="@{/theme/img/contact-bgjpg}">
+<header class="masthead" style="background-image: url('../../static/theme/img/contact-bg.jpg')" th:url="@{/theme/img/contact-bgjpg}" th:replace="admin/_fragments :: header">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
@@ -54,18 +53,18 @@
        <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
       <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
       <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-      <form name="sentMessage" id="contactForm"  method="post" th:action=@{/admin/login}>
+      <form id="loginForm"  method="post" th:action=@{/admin/login}>
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
             <label>Email Address</label>
-            <input type="email" class="form-control" placeholder="Email Address" name= "email" id="email" required data-validation-required-message="Please enter your email address.">
+            <input type="email" class="form-control" placeholder="Email Address" name= "email" id="email">
             <p class="help-block text-danger"></p>
           </div>
         </div>
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
             <label>Password</label>
-            <input type="password" class="form-control" placeholder="Password" name= "password" id="password" required data-validation-required-message="Please enter your password. "></input>
+            <input type="password" class="form-control" placeholder="Password" name= "password" id="password">
             <p class="help-block text-danger"></p>
           </div>
         </div>
@@ -133,6 +132,33 @@
 <script src="../../static/theme/js/clean-blog.min.js"></script>
 <!--/*/</th:block>/*/-->
 
+<!--jquery validate-->
+<script th:src="@{/theme/js/jquery.validate.min.js}"></script>
+<script>
+  $(function() {
+    $('#loginForm').validate({
+      rules: {
+        email: {
+          required: true,
+          email: true
+        },
+        password: {
+          required: true,
+          minlength: 8
+        }
+      },
+      messages: {
+        password: {
+          required: 'Please enter your password'
+        },
+        email: "Please enter a valid email address.",
+      },
+      debug: false, //这个参数为true，那么表单不会提交，只进行检查
+      errorElement:"em",
+      errorClass:"text-danger"
+    });
+  });
+</script>
 </body>
 
 </html>
