--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -33,7 +33,7 @@
 </nav>
 
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('theme/img/home-bg.jpg')" >
+<header class="masthead" style="background-image: url('theme/img/home-bg.jpg')"  th:replace="_fragments :: header">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
